test/valid_bms/uint128.bms
function awoo() -> Uint(128) {
    let i = 0;
    return i;
}
