test/parse_error/let_no_type_no_init.bms
function awoo() -> Void {
    let x;
}
